--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                             <img class="img-fluid" src="img/course-1.jpg" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Group</a>
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
+                                <a href="https://mysliit.sharepoint.com/sites/CDAPSubmissionCloud/2324JuneCloud/Forms/AllItems.aspx?id=%2Fsites%2FCDAPSubmissionCloud%2F2324JuneCloud%2F2023%2D24%2D099%2DStudents%2F1%2E%20Project%20Proposal&viewid=5390129a%2Dda13%2D4304%2D8caf%2D7d3270175787" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
@@ -542,7 +542,7 @@
                             <img class="img-fluid" src="img/course-2.jpg" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Individual</a>
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
+                                <a href="https://mysliit.sharepoint.com/sites/CDAPSubmissionCloud/2324JuneCloud/Forms/AllItems.aspx?id=%2Fsites%2FCDAPSubmissionCloud%2F2324JuneCloud%2F2023%2D24%2D099%2DStudents%2F2%2E%20Status%20Document%201&viewid=5390129a%2Dda13%2D4304%2D8caf%2D7d3270175787" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
@@ -559,7 +559,7 @@
                             <img class="img-fluid" src="img/course-3.jpg" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Individual</a>
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
+                                <a href="https://mysliit.sharepoint.com/sites/CDAPSubmissionCloud/2324JuneCloud/Forms/AllItems.aspx?id=%2Fsites%2FCDAPSubmissionCloud%2F2324JuneCloud%2F2023%2D24%2D099%2DStudents%2F2%2E%20Status%20Document%201&viewid=5390129a%2Dda13%2D4304%2D8caf%2D7d3270175787" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
@@ -576,7 +576,7 @@
                             <img class="img-fluid" src="img/course-3.jpg" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Individual</a>
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
+                                <a href="https://mysliit.sharepoint.com/sites/CDAPSubmissionCloud/2324JuneCloud/Forms/AllItems.aspx?id=%2Fsites%2FCDAPSubmissionCloud%2F2324JuneCloud%2F2023%2D24%2D099%2DStudents%2F2%2E%20Status%20Document%201&viewid=5390129a%2Dda13%2D4304%2D8caf%2D7d3270175787" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
@@ -594,7 +594,7 @@
                             <img class="img-fluid" src="img/course-1.jpg" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Group</a>
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
+                                <a href="https://mysliit.sharepoint.com/sites/CDAPSubmissionCloud/2324JuneCloud/Forms/AllItems.aspx?id=%2Fsites%2FCDAPSubmissionCloud%2F2324JuneCloud%2F2023%2D24%2D099%2DStudents%2F2%2E%20Status%20Document%201&viewid=5390129a%2Dda13%2D4304%2D8caf%2D7d3270175787" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
@@ -612,7 +612,7 @@
                             <img class="img-fluid" src="img/course-2.jpg" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Individual</a>
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
+                                <a href="https://mysliit.sharepoint.com/sites/CDAPSubmissionCloud/2324JuneCloud/Forms/AllItems.aspx?id=%2Fsites%2FCDAPSubmissionCloud%2F2324JuneCloud%2F2023%2D24%2D099%2DStudents%2F2%2E%20Status%20Document%201&viewid=5390129a%2Dda13%2D4304%2D8caf%2D7d3270175787" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Download</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
